Revert bridge concept

--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     "humbug/humbug": "~1.0@dev",
     "elliotchance/concise": "^2.1",
     "symfony/dependency-injection": "*",
-    "symfony/event-dispatcher": "*",
-    "symfony/workflow": "*"
+    "symfony/event-dispatcher": "*"
   },
   "suggest": {
     "symfony/dependency-injection": "To automatically attach your services to event dispatcher based on service tags"
