--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,18 @@
     "psr-4": { "Ostrolucky\\AppEventDispatcher\\Test\\": "test" }
   },
   "require-dev": {
-    "humbug/humbug": "~1.0@dev",
+    "doctrine/orm": "*",
     "elliotchance/concise": "^2.1",
+    "infection/infection": "^0.7.0",
+    "phpunit/phpunit": "^5",
     "symfony/dependency-injection": "*",
     "symfony/event-dispatcher": "*",
-    "symfony/workflow": "*",
-    "doctrine/orm": "*",
-    "friendsofphp/php-cs-fixer": "^2.4"
+    "symfony/workflow": "*"
   },
   "suggest": {
     "symfony/dependency-injection": "To automatically attach your services to event dispatcher based on service tags"
+  },
+  "config": {
+    "sort-packages": true
   }
 }
